# JareZi

./: .gitignore  Anchor.toml  Cargo.toml  package.json
321/accounts/: Predictions.ts
app/: package.json  test.ts
app/instructions/: index.ts  initialize.ts  update.ts
app/types/: InitializeFanoutArgs.ts  InitializeFanoutArgs2.ts  index.ts
jarezi/: Cargo.toml
jarezi/src/: lib.rs
programs/serum-cpi/: Cargo.toml
programs/serum-cpi/src/: lib.rs
tests/: serum-cpi.ts
